# VieM

./: .sconsign.dblite  .travis.yml  CMakeLists.txt  Changelog  NOTES  README.md  SConscript  SConstruct  cleanup.sh  compile.sh  compile_withcmake.sh  permutation
app/: configuration.h  evaluator.cpp  generate_model.cpp  graphchecker.cpp  parse_parameters.h  viem.cpp
deploy/: evaluator  generate_model  graphchecker  viem
example/: run.sh
lib/io/: graph_io.cpp  graph_io.h
lib/mapping/: communication_graph_search_space.cpp  communication_graph_search_space.h  construct_distance_matrix.cpp  construct_distance_matrix.h  construct_mapping.cpp  construct_mapping.h  fast_construct_mapping.cpp  fast_construct_mapping.h  full_search_space.cpp  full_search_space.h  full_search_space_pruned.cpp  full_search_space_pruned.h  local_search_mapping.cpp  local_search_mapping.h  mapping_algorithms.cpp  mapping_algorithms.h
manual/: example_graph.fig  example_graph.fig.bak  phdthesiscs.bib  viem.aux  viem.bbl  viem.blg  viem.tex  viem.tex.bak  viem.toc
